<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_slogon"/>

    <FrameLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_primary_shape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_primary_variant_shape"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"/>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:orientation="vertical">

                <EditText
                    style="@style/EditTextField"
                    android:id="@+id/etCityFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/from_city_hint"
                    android:layout_marginVertical="1dp"
                    android:background="@color/transparent"
                    android:paddingTop="5dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/grey_5"/>

                <EditText
                    style="@style/EditTextField"
                    android:id="@+id/etCityTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:ems="10"
                    android:hint="@string/to_city_hint"
                    android:background="@color/transparent"
                    android:paddingBottom="5dp"/>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/musically_flight_label"/>

    <ProgressBar
        android:id="@+id/pbDateLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        android:layout_gravity="end"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="15dp"
        android:id="@+id/rvMusicRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <Button
        android:layout_marginTop="15dp"
        android:text="@string/show_all_places_label"
        android:textStyle="italic"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"/>

    <TextView
        android:layout_marginTop="30dp"
        android:text="@string/your_first_time_label"
        android:textColor="@color/grey_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>