<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bottom_sheet_background"

    android:paddingVertical="@dimen/activity_vertical_margin"
    android:paddingHorizontal="@dimen/activity_horizontal_margin">

    <View
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_primary_variant_shape"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_primary_shape"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_air_fly"
                android:layout_gravity="center"/>

            <EditText
                style="@style/EditTextField"
                android:id="@+id/etCityFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/from_city_hint"
                android:layout_marginHorizontal="5dp"
                android:background="@color/transparent"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey_4"/>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"
                app:tint="@color/white" />

            <EditText
                style="@style/EditTextField"
                android:textColor="@color/white"
                android:id="@+id/etCityTo"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/to_city_hint"
                android:background="@color/transparent"/>

            <ImageButton
                android:id="@+id/btnClearDestination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_cross" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnComplexRoute"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_hard_route"/>
            <TextView
                style="@style/Theme.TestAirApp.BottomSheet.MyTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_hard_route"
                android:textColor="@color/white"
                android:textAlignment="center"/>
        </LinearLayout>

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnAnywhere"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_anywhere"/>
            <TextView
                style="@style/Theme.TestAirApp.BottomSheet.MyTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_anywhere"
                android:textColor="@color/white"
                android:textAlignment="center"/>
        </LinearLayout>

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnWeekend"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_weakend"/>
            <TextView
                style="@style/Theme.TestAirApp.BottomSheet.MyTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_weekend"
                android:textColor="@color/white"
                android:textAlignment="center"/>
        </LinearLayout>

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnHotTickets"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_hot_tickets"/>
            <TextView
                style="@style/Theme.TestAirApp.BottomSheet.MyTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_hot_tickets"
                android:textColor="@color/white"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDestinations"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"
        android:background="@drawable/rounded_primary_variant_shape"/>
</LinearLayout>